{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 164,
  "lineage": "d69ba644-86e3-8f26-4651-aad57150284a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/loadBalancers/ais-load-balancer/frontendIPConfigurations/ais-frontend-ip-config",
                "inbound_nat_rules": [
                  "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/loadBalancers/ais-load-balancer/inboundNatRules/allow-port-2001-rule"
                ],
                "name": "ais-frontend-ip-config",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/publicIPAddresses/ais-public-ip"
              }
            ],
            "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/loadBalancers/ais-load-balancer",
            "location": "westeurope",
            "name": "ais-load-balancer",
            "resource_group_name": "north-sea-port-hz",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.this",
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/loadBalancers/ais-load-balancer/backendAddressPools/ais-backend-pool",
            "inbound_nat_rules": [
              "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/loadBalancers/ais-load-balancer/inboundNatRules/allow-port-2001-rule"
            ],
            "loadbalancer_id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/loadBalancers/ais-load-balancer",
            "name": "ais-backend-pool"
          },
          "dependencies": [
            "azurerm_lb.this",
            "azurerm_public_ip.this",
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/loadBalancers/ais-load-balancer/backendAddressPools/ais-backend-pool",
            "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/loadBalancers/ais-load-balancer/backendAddressPools/ais-backend-pool/addresses/container-group-address",
            "inbound_nat_rule_port_mapping": [
              {
                "backend_port": 2001,
                "frontend_port": 2001,
                "inbound_nat_rule_name": "allow-port-2001-rule"
              }
            ],
            "ip_address": "10.0.0.4",
            "name": "container-group-address",
            "virtual_network_id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/virtualNetworks/north-sea-port-vnet"
          },
          "dependencies": [
            "azurerm_container_group.this",
            "azurerm_eventhub.this",
            "azurerm_eventhub_namespace.this",
            "azurerm_lb.this",
            "azurerm_lb_backend_address_pool.this",
            "azurerm_public_ip.this",
            "azurerm_resource_group.this",
            "azurerm_subnet.default",
            "azurerm_subnet.events",
            "azurerm_subnet.stream",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/loadBalancers/ais-load-balancer/backendAddressPools/ais-backend-pool",
            "backend_port": 2001,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/loadBalancers/ais-load-balancer/frontendIPConfigurations/ais-frontend-ip-config",
            "frontend_ip_configuration_name": "ais-frontend-ip-config",
            "frontend_port": 0,
            "frontend_port_end": 2001,
            "frontend_port_start": 2001,
            "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/loadBalancers/ais-load-balancer/inboundNatRules/allow-port-2001-rule",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/loadBalancers/ais-load-balancer",
            "name": "allow-port-2001-rule",
            "protocol": "Tcp",
            "resource_group_name": "north-sea-port-hz"
          },
          "dependencies": [
            "azurerm_lb.this",
            "azurerm_lb_backend_address_pool.this",
            "azurerm_public_ip.this",
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/networkSecurityGroups/network-security-group",
            "location": "westeurope",
            "name": "network-security-group",
            "resource_group_name": "north-sea-port-hz",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2001",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnyCustom2001Inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "145.19.248.127",
                  "212.115.197.141",
                  "86.92.2.242"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.0.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "2001",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/networkSecurityGroups/network-security-group/securityRules/AllowAnyCustom2001Inbound",
            "name": "AllowAnyCustom2001Inbound",
            "network_security_group_name": "network-security-group",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "north-sea-port-hz",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "145.19.248.127",
              "212.115.197.141",
              "86.92.2.242"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "ais-receiver",
            "fqdn": "ais-receiver.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/publicIPAddresses/ais-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.166.179.197",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "ais-public-ip",
            "resource_group_name": "north-sea-port-hz",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "delegation": [
              {
                "name": "Microsoft.ContainerInstance.containerGroups",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.ContainerInstance/containerGroups"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/virtualNetworks/north-sea-port-vnet/subnets/default",
            "name": "default",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "north-sea-port-hz",
            "service_endpoints": [
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "north-sea-port-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "events",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/virtualNetworks/north-sea-port-vnet/subnets/events",
            "name": "events",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "north-sea-port-hz",
            "service_endpoints": [
              "Microsoft.EventHub",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "north-sea-port-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "stream",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "delegation": [
              {
                "name": "Microsoft.StreamAnalytics/streamingJobs",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.StreamAnalytics/streamingJobs"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/virtualNetworks/north-sea-port-vnet/subnets/stream",
            "name": "stream",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "north-sea-port-hz",
            "service_endpoints": [
              "Microsoft.EventHub"
            ],
            "virtual_network_name": "north-sea-port-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/virtualNetworks/north-sea-port-vnet/subnets/default",
            "network_security_group_id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/networkSecurityGroups/network-security-group",
            "subnet_id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/virtualNetworks/north-sea-port-vnet/subnets/default"
          },
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.this",
            "azurerm_subnet.default",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16",
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1cbe1d69-0a89-4b93-ba50-7448114d546c",
            "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/virtualNetworks/north-sea-port-vnet",
            "location": "westeurope",
            "name": "north-sea-port-vnet",
            "resource_group_name": "north-sea-port-hz",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/virtualNetworks/north-sea-port-vnet/subnets/default",
                "name": "default",
                "security_group": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/networkSecurityGroups/network-security-group"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/virtualNetworks/north-sea-port-vnet/subnets/events",
                "name": "events"
              },
              {
                "address_prefix": "10.1.0.0/24",
                "id": "/subscriptions/256e4313-54f4-4fd7-965a-0a7168695579/resourceGroups/north-sea-port-hz/providers/Microsoft.Network/virtualNetworks/north-sea-port-vnet/subnets/stream",
                "name": "stream"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    }
  ]
}